--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz</title>
     <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/animHome.css">
-    <link rel="stylesheet" type="text/css" href="/css/animQuestions.css">
-    <link rel="stylesheet" type="text/css" href="/css/animFin.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/animHome.css">
+    <link rel="stylesheet" type="text/css" href="css/animQuestions.css">
+    <link rel="stylesheet" type="text/css" href="css/animFin.css">
 </head>
 
 <body>
