added theme color for mobile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/animHome.css">
     <link rel="stylesheet" type="text/css" href="css/animQuestions.css">
     <link rel="stylesheet" type="text/css" href="css/animFin.css">
+    <meta name="theme-color" content="#3E1E68" />
 </head>
 
 <body>
